--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -53,7 +53,7 @@
     "typescript": "~3.8.3"
   },
   "engine": {
-    "node": "8.9.4",
-    "npm": "5.6.0"
+    "node": "13.12.0",
+    "npm": "6.14.4"
   }
 }
