--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   },
-  "engine": {
+  "engines": {
     "node": "13.12.0",
     "npm": "6.14.4"
   }
