--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "postinstall":"ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -52,7 +52,7 @@
     "typescript": "~3.8.3"
   },
   "engines": {
-    "node": "13.x",
-    "npm": "6.14.4"
+    "node": "~13.x",
+    "npm": "~6.14.4"
   }
 }
